[gd_scene load_steps=5 format=3 uid="uid://dpdi856pclny0"]

[ext_resource type="Script" path="res://Player_Projectile.gd" id="1_qsr6y"]
[ext_resource type="Texture2D" uid="uid://cwi8r1kcgthma" path="res://assets/Hero.png" id="2_cn31h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ka164"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_b7sm4"]
radius = 4.0

[node name="Player_Projectile" type="Node2D"]
top_level = true
script = ExtResource("1_qsr6y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cn31h")
hframes = 3
vframes = 5
frame = 12

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ka164")

[node name="ImpactDetector" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactDetector"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_b7sm4")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
